--- a/Flowers-Shop/src/main/resources/templates/edit-order.html
+++ b/Flowers-Shop/src/main/resources/templates/edit-order.html
@@ -4,7 +4,7 @@
 <body class="all-orders">
 <header th:replace="~{fragments/commons::nav}"></header>
 <section class="gradient-custom mb-5">
-    <h1 class="display-6 pt-5 m-5 fst-italic text-center text-white myFont1">Edit order</h1>
+    <h1 class="display-6 pt-5 m-5 fst-italic text-center text-white myFont1" th:text="#{edit_order}">Edit order</h1>
     <form id="formData" th:method="post" th:action="@{/order/save}" th:object="${order}">
         <div class="container py-1">
             <div class="row d-flex justify-content-center align-items-center">
@@ -13,7 +13,7 @@
                         <input type="hidden" th:field="*{id}">
                         <div class="d-flex justify-content-center pt-4 text-white">
                             <p class="fw-bold mb-0 text-white text-center"
-                               th:text="|Order id: ${order.getId()}|">Order Id: {order.id}</p>
+                               th:text="|#{order_id} ${order.getId()}|">Order Id: {order.id}</p>
                         </div>
                         <div class="p-4">
                             <div class="shadow-0 mb-4">
@@ -27,12 +27,12 @@
                                         <div class="col-lg-3 text-center d-flex flex-column justify-content-center
                                         align-items-center text-white">
                                             <p class="mb-0 small text-white"
-                                               th:text="|Item No: ${item.getItemNumber()}|">Item number</p>
+                                               th:text="|#{item_number}: ${item.getItemNumber()}|">Item number</p>
                                         </div>
                                         <div class="col-lg-3 text-center d-flex flex-column justify-content-center
                                         align-items-center text-white">
                                             <p class="col-10">
-                                                <label th:for="${i.index}">Quantity:</label>
+                                                <label th:for="${i.index}" th:text="#{quantity}">Quantity:</label>
                                                 <input class="col-5" type="number" step="1" min="1" th:id="${i.index}"
                                                        name="quantity"
                                                        th:field="*{items[__${i.index}__].quantity}"/><br/>
@@ -42,7 +42,7 @@
                                          align-items-center text-white">
                                             <a class="remove-btn rounded-pill py-1 px-3" th:if="(*{items.size()} != 1)"
                                                th:href="@{/order/deleteItem/{itemId}/{orderId}(itemId=${item.getId()},
-                                                orderId=${order.getId()})}" onclick="return confirm('Are you sure?')">
+                                                orderId=${order.getId()})}" onclick="return confirm(#{confirm})" th:text="#{delete}">
                                                 Delete</a>
                                         </div>
                                         <hr class="mt-3 w-50 mx-auto">
@@ -51,9 +51,9 @@
                             </div>
                             <hr class="mb-4" style="background-color: #e0e0e0; opacity: 1;">
                             <div class=" text-white text-center">
-                                <label for="status">Status:</label>
+                                <label for="status" th:text="#{status}">Status:</label>
                                 <select th:field="*{status}" class="mb-3" id="status" name="status">
-                                    <option th:value="-1" disabled selected>Select new status</option>
+                                    <option th:value="-1" disabled selected th:text="#{select_status}">Select new status</option>
                                     <option th:each="status: ${statuses}" th:value="${status}" th:text="${status}">
                                         {status}
                                     </option>
@@ -61,15 +61,15 @@
                             </div>
                             <div class=" text-white">
                                 <p class="text-center text-white">
-                                    <label for="shippingAddress">Shipping Address</label>
+                                    <label for="shippingAddress" th:text="#{shippingAddress}">Shipping Address</label>
                                     <input class="w-100" type="text" id="shippingAddress" name="shippingAddress"
                                            th:field="*{shippingAddress}"/><br/>
                                 </p>
                             </div>
                         </div>
                         <div class="d-flex justify-content-center gap-5 pb-2 mb-3 text-center">
-                            <a class="btn-gold rounded-pill py-2 w-25" th:href="@{/order/cancel}">Cancel</a>
-                            <button type="submit" class="btn-gold rounded-pill py-2 w-25">Save</button>
+                            <a class="btn-gold rounded-pill py-2 w-25" th:href="@{/order/cancel}" th:text="#{cancel}">Cancel</a>
+                            <button type="submit" class="btn-gold rounded-pill py-2 w-25" th:text="#{save}">Save</button>
                         </div>
                     </div>
                 </div>
