--- a/Flowers-Shop/src/main/resources/templates/shipping-order.html
+++ b/Flowers-Shop/src/main/resources/templates/shipping-order.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/commons::head}"></head>
-<body class="shipping-order">
+<body class="shipping">
 <header th:replace="~{fragments/commons::nav}"></header>
 <section class="gradient-custom mb-5 ">
     <h1 class="display-6 pt-5 m-5 fst-italic text-center text-white myFont1">
