--- a/Flowers-Shop/src/main/resources/templates/home.html
+++ b/Flowers-Shop/src/main/resources/templates/home.html
@@ -17,7 +17,7 @@
                     <div class="card-body">
                         <h5 class="card-title" th:text="${bouquet.description}">{description}</h5>
                         <p class="card-text" th:text="|&numero; ${bouquet.itemNumber}|">{No.}</p>
-                        <p class="card-text mb-2" th:text="|#{price} ${bouquet.unitPrice} &euro;|">{Price: lv.}</p>
+                        <p class="card-text mb-2" th:text="|#{price} ${#numbers.formatDecimal(bouquet.getUnitPrice(),0,2)} &euro;|">{Price: lv.}</p>
                         <a sec:authorize="!hasRole('ROLE_ADMIN')"
                            th:href="@{/cart/add/{itemNumber}(itemNumber=${bouquet.itemNumber})}"
                            class="btn-gold rounded-pill py-2 px-4"
